# content-creator

./: .env.example  .env.local.example  .gitignore  Dockerfile  Makefile  Next-Steps.md  Prompts-and-songs-results.md  docker-compose.yml  pyproject.toml  railway.toml  test_similarity.py
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-planner.md  (+6 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  deferred-items.md  v1-MILESTONE-AUDIT.md
docker/: init.sql
migrations/: 0001_initial_schema.sql  0002_script_generation.sql  0003_video_columns.sql  0004_approval_events.sql  0005_publishing.sql  0006_analytics.sql  0007_hardening.sql  0008_v2_schema.sql  0009_phase10_schema.sql  0010_phase11_blocked_status.sql  0011_add_platform_facebook.sql  0012_phase13_schema.sql
scripts/: dry_run_heygen_submit.py  dry_run_script_generation.py  publish_docker.sh
tests/: conftest.py  test_ai_labels.py  test_anti_repetition.py  test_caption_generator.py  test_character_bible.py  test_character_bible_grey_kitten.py  test_kling_backoff.py  test_kling_balance.py  test_kling_circuit_breaker.py  test_kling_poller.py  test_kling_service.py  test_music_license_gate.py  test_music_matcher.py  test_music_pool.py  test_phase04_smoke.py  test_phase05_smoke.py  test_phase07_e2e.py  test_pipeline_wiring.py  test_prompt_generation.py  test_quick_001_script_generation.py  test_scene_engine.py  test_seasonal_calendar.py  test_smoke.py  test_validate_supabase_key.py
(+376 files in other folders)
