[project]
name = "content-creation"
version = "3.5.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.7",
    "APScheduler==3.11.2",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "supabase>=2.0",
    "httpx>=0.28",
    "python-telegram-bot==21.*",
    "pytz>=2024.1",
    "python-dotenv>=1.0",
    "anthropic>=0.83.0",
    "tenacity>=8.0",
    "openai>=2.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end integration tests that require live credentials (deselect with '-m not e2e')",
]
